Took care of some findbugs issues.
git-svn-id: http://thebes.codingwell.net/repos/BC@98 23f83f56-a308-4d86-8998-a9fc3f2562b2